@@ -1,3 +1,12 @@
+2003-02-27  NeilFred Picciotto  <fred@halfshell.halflab.com>
+
+	* tnt.el (tnt-im): recenter when entering the im buffer
+
+2002-10-23  NeilFred Picciotto  <fred@halfshell.halflab.com>
+
+	* tnt.el (tnt-html-regexps-to-replace): added &quot;
+	(tnt-buddy-list-menu): added a newline
+
 2002-10-17  Matthias Granberry  <matthias@utdallas.edu>
 	* tnt.el (tnt-default-info-message): initial support for setting
 	profiles.
